Adição da troca de frases no rodapé ao clicar nos botões

--- a/index.html
+++ b/index.html
@@ -25,13 +25,21 @@
     <div id="main"></div>
 
     <footer>
-      <span id="quotes"></span>
-      <!--
+      <span id="quotes">"Frase 1"<b>Pessoa 1</b></span>
+
       <ul>
-        <li>"Frase 1"<b>Pessoa 1</b></li>
-        <li>"Frase 2"<b>Pessoa 2</b></li>
-        <li>"Frase 3"<b>Pessoa 3</b></li>
-      </ul> -->
+        <li>
+          <a class="dot" href="#" role="button" onClick="changeQuote(1)"></a>
+        </li>
+        <li>
+          <a class="dot" href="#" role="button" onClick="changeQuote(2)"></a>
+        </li>
+        <li>
+          <a class="dot" href="#" role="button" onClick="changeQuote(3)"></a>
+        </li>
+      </ul>
     </footer>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
