Finalização da criação da estrutura da pagina principal

--- a/pages/post1.html
+++ b/pages/post1.html
@@ -47,34 +47,19 @@
             alt="logotipo"
           />
         </span>
-
         <span>
-          <p><b>NoControle.blog.</b> Todos os direitos reservados.</p>
+          <p id="direitos">
+            <b>NoControle.blog.</b> Todos os direitos reservados.
+          </p>
         </span>
 
         <ul id="menu">
           <li>
-            <a href="https://www.instagram.com/nocontrole.blog/"
+            <a href="https://www.instagram.com/nocontrole.blog/" target="_blank"
               ><img
                 src="../assets/ico-insta-branco.png"
                 id="ico-geral"
                 alt="instagram"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="../assets/ico-insta-branco.png"
-                id="ico-geral"
-                alt="facebook"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="../assets/ico-insta-branco.png"
-                id="ico-geral"
-                alt="linkedin"
             /></a>
           </li>
         </ul>
