--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="author" content="NoControle" />
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/index.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -36,7 +37,128 @@
       </nav>
     </header>
 
-    <div id="main"></div>
+    <div id="main">
+
+      <!-- Banner do site-->
+      <div id="banner">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-4 align-self-center">
+              <h2><b>Lorem ipsum dolor sit amet, </br>
+                consectetur adipiscing elit.</b>
+              </h2>
+             <div class="col-lg-7"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Fim do banner do site -->
+
+      <!-- Sessão com os posts -->
+      <div id="posts">
+        <!-- Post principal -->
+        <div id="post-principal" class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="row" >
+                <div class="col-lg-6">
+                  <img src="assets/thumb-principal.jpg" id="thumb-principal" alt="thumb">
+                </div> 
+                <div class="col-lg-6">
+                  <div id="texto-principal" class="row">
+                    <h4>
+                      <b>Quem manda na minha terra sou euzis, taligadis?</b>
+                    </h4>
+                    <span id="categoria-post">Educação Financeira 15/01/2020</span>
+                    <p id="descricao-principal" class="align-self-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla luctus est at suscipit viverra. 
+                      Curabitur a fermentum est. Fusce non nunc justo. Sed quis erat nec risus varius porta eu in dolor. 
+                      Pellentesque euismod sit amet felis placerat pellentesque. In aliquam viverra scelerisque. 
+                      Sed maximus iaculis elit, sit amet sodales ipsum viverra vel. 
+                      Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+                      Vivamus lacus leo, finibus eget eros sit amet, iaculis dapibus justo. 
+                    </p>
+                    <button type="button" class="btn btn-primary">Ver postagem</button>
+                  </div>               
+                </div>                
+              </div>
+          </div>          
+        </div>
+      </div>     
+      <!-- Fim da sessao do post principal --> 
+
+      <!-- Posts do blog -->
+      <div id="sessao-blog" class="container">
+        <div class="row">
+          <span><img src="assets/blog-ico.png" id="ico-blog" alt="blog"></span>
+          <h1 id="titulo-blog">Blog</h1>
+        </div>
+
+        <div class="row linha-postagem">
+          <div class="col-lg-4">
+            <div>
+              <img src="assets/thumb-principal.jpg" class="thumb-blog" alt="thumb">
+              <h5 class="titulo-atalho-blog">
+                Quem manda na minha terra sou euzis, taligadis?
+              </h5>
+              <button type="button" class="btn btn-primary">Ver postagem</button>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div>
+              <img src="assets/thumb-principal.jpg" class="thumb-blog" alt="thumb">
+              <h5 class="titulo-atalho-blog">
+                Quem manda na minha terra sou euzis, taligadis?
+              </h5>
+              <button type="button" class="btn btn-primary">Ver postagem</button>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div>
+              <img src="assets/thumb-principal.jpg" class="thumb-blog" alt="thumb">
+              <h5 class="titulo-atalho-blog">
+                Quem manda na minha terra sou euzis, taligadis?
+              </h5>
+              <button type="button" class="btn btn-primary">Ver postagem</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="row linha-postagem">
+          <div class="col-lg-4">
+            <div>
+              <img src="assets/thumb-principal.jpg" class="thumb-blog" alt="thumb">
+              <h5 class="titulo-atalho-blog">
+                Quem manda na minha terra sou euzis, taligadis?
+              </h5>
+              <button type="button" class="btn btn-primary">Ver postagem</button>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div>
+              <img src="assets/thumb-principal.jpg" class="thumb-blog" alt="thumb">
+              <h5 class="titulo-atalho-blog">
+                Quem manda na minha terra sou euzis, taligadis?
+              </h5>
+              <button type="button" class="btn btn-primary">Ver postagem</button>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div>
+              <img src="assets/thumb-principal.jpg" class="thumb-blog" alt="thumb">
+              <h5 class="titulo-atalho-blog">
+                Quem manda na minha terra sou euzis, taligadis?
+              </h5>
+              <button type="button" class="btn btn-primary">Ver postagem</button>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <!-- Fim da sessao dos posts do blog -->
+
+    </div>
+    <!-- Fim da sessao dos posts -->
 
     <footer>
       <nav id="rodape">
@@ -47,7 +169,6 @@
             alt="logotipo"
           />
         </span>
-
         <span>
           <p id="direitos">
             <b>NoControle.blog.</b> Todos os direitos reservados.
@@ -61,22 +182,6 @@
                 src="assets/ico-insta-branco.png"
                 id="ico-geral"
                 alt="instagram"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="assets/ico-insta-branco.png"
-                id="ico-geral"
-                alt="facebook"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="assets/ico-insta-branco.png"
-                id="ico-geral"
-                alt="linkedin"
             /></a>
           </li>
         </ul>
