--- a/pages/post1.html
+++ b/pages/post1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="author" content="NoControle" />
     <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="../styles/page1.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -36,7 +37,20 @@
       </nav>
     </header>
 
-    <div id="main"></div>
+    <div id="main">
+      <div id="box">
+        <span id="box-title">Quem manda na minha terra sou euzis</span>
+      </div>
+      <div id="mini" class="row">
+        <div class="col">
+          <span id="mini-title">Mussum Ipsum, cacilds vidis litro abertis</span>
+          <span id="mini-txt">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Per aumento de cachacis, eu reclamis. Quem num gosta di mim que vai caçá sua turmis!</span>
+        </div>
+        <div class="col">
+
+        </div>
+      </div>
+    </div>
 
     <footer>
       <nav id="rodape">
