Atualização do layout e inicio da construção da pagina de posts

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <span>
           <a href="index.html"
             ><img
-              src="assets/logo-branco.png"
+              src="assets/logo-colorido.png"
               id="logo-cabecalho"
               alt="logotipo"
           /></a>
         </span>
         <ul id="menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">E-book</a></li>
           <li>
             <a href="#"
               ><img src="assets/lupa.png" id="ico-geral" alt="procurar"
@@ -43,12 +43,13 @@
       <div id="banner">
         <div class="container">
           <div class="row">
-            <div class="col-lg-1"></div>
-            <div class="col-lg-4 align-self-center">
-              <h2><b>Lorem ipsum dolor sit amet, </br>
-                consectetur adipiscing elit.</b>
-              </h2>
-             <div class="col-lg-7"></div>
+            <div class="col-lg-7 align-self-center">
+              <h1><b>Educação Financeira </br>
+                  sem complicação</b>
+              </h1>              
+            </div>
+            <div class="col-lg-5 align-self-center">
+              <img class="img-fluid" src="assets/pessoas-banner.png" alt="pessoas banner">
             </div>
           </div>
         </div>
@@ -57,41 +58,19 @@
 
       <!-- Sessão com os posts -->
       <div id="posts">
-        <!-- Post principal -->
-        <div id="post-principal" class="container">
+        <!-- Inicio form e-book -->        
+        <div id="form-principal" class="container">
           <div class="row">
-            <div class="col-lg-12">
-              <div class="row" >
-                <div class="col-lg-6">
-                  <img src="assets/thumb-principal.jpg" id="thumb-principal" alt="thumb">
-                </div> 
-                <div class="col-lg-6">
-                  <div id="texto-principal" class="row">
-                    <h4>
-                      <b>Quem manda na minha terra sou euzis, taligadis?</b>
-                    </h4>
-                    <span id="categoria-post">Educação Financeira 15/01/2020</span>
-                    <p id="descricao-principal" class="align-self-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla luctus est at suscipit viverra. 
-                      Curabitur a fermentum est. Fusce non nunc justo. Sed quis erat nec risus varius porta eu in dolor. 
-                      Pellentesque euismod sit amet felis placerat pellentesque. In aliquam viverra scelerisque. 
-                      Sed maximus iaculis elit, sit amet sodales ipsum viverra vel. 
-                      Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-                      Vivamus lacus leo, finibus eget eros sit amet, iaculis dapibus justo. 
-                    </p>
-                    <button type="button" class="btn btn-primary">Ver postagem</button>
-                  </div>               
-                </div>                
-              </div>
-          </div>          
+            <div></div>
+          </div>
         </div>
-      </div>     
-      <!-- Fim da sessao do post principal --> 
+        <!-- Fim da sessao do post principal --> 
 
       <!-- Posts do blog -->
       <div id="sessao-blog" class="container">
         <div class="row">
           <span><img src="assets/blog-ico.png" id="ico-blog" alt="blog"></span>
-          <h1 id="titulo-blog">Blog</h1>
+          <h3 id="titulo-blog">Blog</h3>
         </div>
 
         <div class="row linha-postagem">
@@ -101,7 +80,8 @@
               <h5 class="titulo-atalho-blog">
                 Quem manda na minha terra sou euzis, taligadis?
               </h5>
-              <button type="button" class="btn btn-primary">Ver postagem</button>
+              <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
+              <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
             </div>
           </div>
           <div class="col-lg-4">
@@ -110,7 +90,8 @@
               <h5 class="titulo-atalho-blog">
                 Quem manda na minha terra sou euzis, taligadis?
               </h5>
-              <button type="button" class="btn btn-primary">Ver postagem</button>
+              <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
+              <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
             </div>
           </div>
           <div class="col-lg-4">
@@ -119,7 +100,8 @@
               <h5 class="titulo-atalho-blog">
                 Quem manda na minha terra sou euzis, taligadis?
               </h5>
-              <button type="button" class="btn btn-primary">Ver postagem</button>
+              <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
+              <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
             </div>
           </div>
         </div>
@@ -131,7 +113,8 @@
               <h5 class="titulo-atalho-blog">
                 Quem manda na minha terra sou euzis, taligadis?
               </h5>
-              <button type="button" class="btn btn-primary">Ver postagem</button>
+              <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
+              <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
             </div>
           </div>
           <div class="col-lg-4">
@@ -140,7 +123,8 @@
               <h5 class="titulo-atalho-blog">
                 Quem manda na minha terra sou euzis, taligadis?
               </h5>
-              <button type="button" class="btn btn-primary">Ver postagem</button>
+              <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
+              <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
             </div>
           </div>
           <div class="col-lg-4">
@@ -149,43 +133,37 @@
               <h5 class="titulo-atalho-blog">
                 Quem manda na minha terra sou euzis, taligadis?
               </h5>
-              <button type="button" class="btn btn-primary">Ver postagem</button>
+              <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
+              <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
             </div>
           </div>
         </div>
-
       </div>
       <!-- Fim da sessao dos posts do blog -->
+      </div>
+      <!-- Fim da sessao dos posts -->
 
     </div>
-    <!-- Fim da sessao dos posts -->
 
     <footer>
-      <nav id="rodape">
-        <span>
-          <img
-            src="assets/logo-branco.png"
-            id="logo-cabecalho"
-            alt="logotipo"
-          />
-        </span>
-        <span>
-          <p id="direitos">
-            <b>NoControle.blog.</b> Todos os direitos reservados.
-          </p>
-        </span>
-
-        <ul id="menu">
-          <li>
-            <a href="https://www.instagram.com/nocontrole.blog/" target="_blank"
-              ><img
-                src="assets/ico-insta-branco.png"
-                id="ico-geral"
-                alt="instagram"
-            /></a>
-          </li>
-        </ul>
-      </nav>
+      <div id="rodape">
+        <div id="linha-rodape" class="row align-items-center">
+          <div class="col-lg-1"></div>
+          <div class="col-lg-3">
+            <img
+              src="assets/logo-branco.png"
+              id="logo-cabecalho"
+              alt="logotipo"
+            />             
+          </div>
+          <div class="col-lg-7 align-self-center"> 
+            <p id="direitos">
+              <b>NoControle.blog.</b> Todos os direitos reservados.
+            </p>
+          </div>
+          <div class="col-lg-1"></div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
