--- a/pages/post1.html
+++ b/pages/post1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="author" content="NoControle" />
     <link rel="stylesheet" href="../styles/main.css" />
-    <link rel="stylesheet" href="../styles/page1.css" />
+    <link rel="stylesheet" href="../styles/post.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -14,20 +14,21 @@
     <title>No Controle</title>
   </head>
   <body>
+    <!-- Cabeçalho -->
     <header>
       <nav id="cabecalho">
         <span>
           <a href="../index.html"
             ><img
-              src="../assets/logo-branco.png"
+              src="../assets/logo-colorido.png"
               id="logo-cabecalho"
               alt="logotipo"
           /></a>
         </span>
         <ul id="menu">
           <li><a href="../index.html">Home</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">E-book</a></li>
           <li>
             <a href="#"
               ><img src="../assets/lupa.png" id="ico-geral" alt="procurar"
@@ -36,20 +37,36 @@
         </ul>
       </nav>
     </header>
+    <!-- Fim do cabeçalho -->
 
+    <!-- Corpo do site -->
     <div id="main">
-      <div id="box">
-        <span id="box-title">Quem manda na minha terra sou euzis</span>
-      </div>
-      <div id="mini" class="row">
-        <div class="col">
-          <span id="mini-title">Mussum Ipsum, cacilds vidis litro abertis</span>
-          <span id="mini-txt">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Per aumento de cachacis, eu reclamis. Quem num gosta di mim que vai caçá sua turmis!</span>
+      <!-- Banner do site-->
+      <div id="banner">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-6 align-self-end">
+              <h2><b>Quem manda na minha terra sou euzis.</b></h2>
+              <h5 id="subtitulo-banner">Quem manda na minha terra sou euzis</h5>
+              <div class="col-lg-3"></div>
+            </div>
+          </div>
         </div>
-        <div class="col">
+      </div>
+      <!-- Fim do banner do site -->
 
+      <!-- Área do post -->
+      <div id="corpo-post">
+        <div id="container">
+          <div id="row">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-10"></div>
+            <div class="col-lg-1"></div>
+          </div>
         </div>
       </div>
+      <!-- Fim da área do post -->
     </div>
 
     <footer>
