Atualização do corpo da pagina principal

--- a/index.html
+++ b/index.html
@@ -59,9 +59,21 @@
       <!-- Sessão com os posts -->
       <div id="posts">
         <!-- Inicio form e-book -->        
-        <div id="form-principal" class="container">
+        <div id="ebook-principal" class="container">
           <div class="row">
-            <div></div>
+            <div class="col-lg-1"></div>
+            <div class="col-lg-5 align-self-center">
+              <img class="img-fluid" src="assets/ebook.png" alt="ebook">
+            </div>
+            <div class="col-lg-5 align-self-center">
+              <p id="ebook-gratuito">E-book gratuito</p>
+              <h3 id="titulo-ebook-principal">Purpurina, corote & Economia</h3>
+              <p id="descricao-ebook-principal">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. 
+                Per aumento de cachacis, eu reclamis. Quem num gosta di mim que vai caçá sua turmis!
+              </p>
+              <button id="baixar-ebook-principal" type="button" class="btn btn-primary">baixar e-book gratuito</button>
+            </div>
+            <div class="col-lg-1"></div>
           </div>
         </div>
         <!-- Fim da sessao do post principal --> 
