finalização da estrutura basica da pagina principal

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
           <li><a href="#">Sobre</a></li>
           <li><a href="#">E-book</a></li>
           <li>
-            <a href="#"
-              ><img src="assets/lupa.png" id="ico-geral" alt="procurar"
-            /></a>
+            <input type="text" name="pesquisa" id="pesquisa" placeholder="Busca">
           </li>
         </ul>
       </nav>
