Inicio da implementação do formulário de download do relatorio

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </span>
         <ul id="menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">E-book</a></li>
+          <li><a href="pages/sobre.html">Sobre</a></li>
+          <li><a href="pages/ebook.html">E-book</a></li>
           <li>
             <input type="text" name="pesquisa" id="pesquisa" placeholder="Busca">
           </li>
@@ -69,7 +69,8 @@
               <p id="descricao-ebook-principal">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. 
                 Per aumento de cachacis, eu reclamis. Quem num gosta di mim que vai caçá sua turmis!
               </p>
-              <button id="baixar-ebook-principal" type="button" class="btn btn-primary">baixar e-book gratuito</button>
+              <a href="pages/ebook.html" id="baixar-ebook-principal">baixar e-book gratuito</a>
+              <!--<button  type="button" class="btn btn-primary"></button>-->
             </div>
             <div class="col-lg-1"></div>
           </div>
@@ -161,7 +162,7 @@
           <div class="col-lg-1"></div>
           <div class="col-lg-3">
             <img
-              src="assets/logo-branco.png"
+              src="assets/logo-colorido.png"
               id="logo-cabecalho"
               alt="logotipo"
             />             
