--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="author" content="NoControle" />
     <link rel="stylesheet" href="../styles/main.css" />
-    <link rel="stylesheet" href="../styles/post.css" />
+    <link rel="stylesheet" href="../styles/ebook.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -43,42 +43,60 @@
     <!-- Fim do cabeçalho -->
 
     <!-- Corpo do site -->
-    <div id="main">
-      <!-- Banner do site-->
-      <div id="banner">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-1"></div>
-            <div class="col-lg-6 align-self-end">
-              <h2><b>Quem manda na minha terra sou euzis.</b></h2>
-              <h5 id="subtitulo-banner">Quem manda na minha terra sou euzis</h5>
-              <div class="col-lg-3"></div>
+    <div id="ebook-corpo-pagina">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-1"></div>
+          <div class="col-lg-10">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-6">
+                  <img
+                    src="../assets/ebook.png"
+                    class="img-fluid"
+                    alt="ebook"
+                  />
+                </div>
+                <div class="col-lg-6">
+                  <form
+                    method="POST"
+                    action="https://smtl.gama.academy/leads/f5d1eb00-39f4-11ea-96ea-713ae26a8736"
+                  >
+                    <input
+                      name="nome"
+                      type="text"
+                      pattern="^\D{2,}\s[\D\s]{2,}$"
+                      title="Digite seu nome completo"
+                      placeholder="Digite seu nome"
+                      required
+                    />
+                    <input
+                      name="email"
+                      type="email"
+                      title="Digite um email válido"
+                      placeholder="Digite seu e-mail"
+                      required
+                    />
+                    <input name="redirectTo" type="hidden" value="ebook.html" />
+                    <input name="debugMode" type="hidden" value="true" />
+                    <input type="submit" />
+                  </form>
+                </div>
+              </div>
             </div>
           </div>
+          <div class="col-lg-1"></div>
         </div>
       </div>
-      <!-- Fim do banner do site -->
-
-      <!-- Área do post -->
-      <div id="corpo-post">
-        <div id="container">
-          <div id="row">
-            <div class="col-lg-1"></div>
-            <div class="col-lg-10"></div>
-            <div class="col-lg-1"></div>
-          </div>
-        </div>
-      </div>
-      <!-- Fim da área do post -->
     </div>
 
     <footer>
-      <div id="rodape">
+      <div id="rodape-ebook">
         <div id="linha-rodape" class="row align-items-center">
           <div class="col-lg-1"></div>
           <div class="col-lg-3">
             <img
-              src="../assets/logo-colorido.png"
+              src="../assets/logo-branco.png"
               id="logo-cabecalho"
               alt="logotipo"
             />
