--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -43,34 +43,7 @@
     <!-- Fim do cabeçalho -->
 
     <!-- Corpo do site -->
-    <div id="main">
-      <!-- Banner do site-->
-      <div id="banner">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-1"></div>
-            <div class="col-lg-6 align-self-end">
-              <h2><b>Quem manda na minha terra sou euzis.</b></h2>
-              <h5 id="subtitulo-banner">Quem manda na minha terra sou euzis</h5>
-              <div class="col-lg-3"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Fim do banner do site -->
-
-      <!-- Área do post -->
-      <div id="corpo-post">
-        <div id="container">
-          <div id="row">
-            <div class="col-lg-1"></div>
-            <div class="col-lg-10"></div>
-            <div class="col-lg-1"></div>
-          </div>
-        </div>
-      </div>
-      <!-- Fim da área do post -->
-    </div>
+    <div id="main"></div>
 
     <footer>
       <div id="rodape">
