--- a/pages/post1.html
+++ b/pages/post1.html
@@ -78,7 +78,7 @@
           <div class="col-lg-1"></div>
           <div class="col-lg-3">
             <img
-              src="../assets/logo-colorido.png"
+              src="../assets/logo-branco.png"
               id="logo-cabecalho"
               alt="logotipo"
             />
