--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -62,24 +62,29 @@
                     method="POST"
                     action="https://smtl.gama.academy/leads/f5d1eb00-39f4-11ea-96ea-713ae26a8736"
                   >
+                  <div id="form-box">
+                    <span>E-BOOK</span>
+                    <h3>Mussum Ipsum, cacilds vidis litro abertis</h3>
+                    <span>Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Per aumento de cachacis, eu reclamis. Quem num gosta di mim que vai caçá sua turmis!</span>
                     <input
                       name="nome"
                       type="text"
                       pattern="^\D{2,}\s[\D\s]{2,}$"
-                      title="Digite seu nome completo"
-                      placeholder="Digite seu nome"
+                      title="Nome"
+                      placeholder="Nome"
                       required
                     />
                     <input
                       name="email"
                       type="email"
-                      title="Digite um email válido"
-                      placeholder="Digite seu e-mail"
+                      title="E-mail"
+                      placeholder="E-mail"
                       required
                     />
                     <input name="redirectTo" type="hidden" value="ebook.html" />
                     <input name="debugMode" type="hidden" value="true" />
-                    <input type="submit" />
+                      <input type="submit" value="BAIXAR O MATERIAL"/>
+                  </div>
                   </form>
                 </div>
               </div>
