--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
           /></a>
         </span>
         <ul id="menu">
-          <li><a href="index.html">Home</a></li>
+          <!-- <li><a href="index.html">Home</a></li>
           <li><a href="pages/sobre.html">Sobre</a></li>
           <li><a href="pages/ebook.html">E-book</a></li>
           <li>
             <input type="text" name="pesquisa" id="pesquisa" placeholder="Busca">
-          </li>
+          </li> -->
         </ul>
       </nav>
     </header>
