--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -26,7 +26,7 @@
           /></a>
         </span>
         <ul id="menu">
-          <li><a href="../index.html">Home</a></li>
+          <!-- <li><a href="../index.html">Home</a></li>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="ebook.html">E-book</a></li>
           <li>
@@ -36,7 +36,7 @@
               id="pesquisa"
               placeholder="Busca"
             />
-          </li>
+          </li> -->
         </ul>
       </nav>
     </header>
