--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -5,6 +5,7 @@
     <meta name="author" content="NoControle" />
     <link rel="stylesheet" href="../styles/main.css" />
     <link rel="stylesheet" href="../styles/post.css" />
+    <link rel="stylesheet" href="../styles/sobre.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -42,8 +43,51 @@
     </header>
     <!-- Fim do cabeçalho -->
 
-    <!-- Corpo do site -->
-    <div id="main"></div>
+     <!-- Corpo do site -->
+     <div id="main">
+      <!-- Banner do site-->
+      <div id="banner">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-6 align-self-end">
+              <h2><b>Sobre nós</b></h2>
+              <h5 id="subtitulo-banner">Quem manda na minha terra sou euzis</h5>
+              <div class="col-lg-3"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Fim do banner do site -->
+
+      <!-- Área do post -->
+      <div id="corpo-post">
+        <div id="container">
+          <div id="row">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-10">
+              <div class="row">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6">
+                  <div id="sobre-txt">
+                    Mussum Ipsum, cacilds vidis litro abertis. Mauris nec dolor in eros commodo tempor. Aenean aliquam molestie leo, vitae iaculis nisl. Quem num gosta di mé, boa gentis num é. Per aumento de cachacis, eu reclamis. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis. Suco de cevadiss deixa as pessoas mais interessantis. Si num tem leite então bota uma pinga aí cumpadi! Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus. In elementis mé pra quem é amistosis quis leo. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. Quem manda na minha terra sou euzis! Nullam volutpat risus nec leo commodo, ut interdum diam laoreet. Sed non consequat odio. Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Pra lá , depois divoltis porris, paradis. Atirei o pau no gatis, per gatis num morreus. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Aenean aliquam molestie leo, vitae iaculis nisl. Delegadis gente finis, bibendum egestas augue arcu ut est. Diuretics paradis num copo é motivis de denguis. Leite de capivaris, leite de mula manquis sem cabeça.
+                  </div>
+                </div>
+                <div class="col">
+                  <div id="assinante">
+                    
+                  </div>
+                </div>
+
+                <div class="col-lg-3"></div>
+              </div>
+            </div>
+            <div class="col-lg-1"></div>
+          </div>
+        </div>
+      </div>
+      <!-- Fim da área do post -->
+    </div>
 
     <footer>
       <div id="rodape">
