--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -27,7 +27,7 @@
           /></a>
         </span>
         <ul id="menu">
-          <li><a href="../index.html">Home</a></li>
+          <!--<li><a href="../index.html">Home</a></li>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="ebook.html">E-book</a></li>
           <li>
@@ -37,7 +37,7 @@
               id="pesquisa"
               placeholder="Busca"
             />
-          </li>
+          </li>-->
         </ul>
       </nav>
     </header>
