--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -70,12 +70,36 @@
                 <div class="col-lg-3"></div>
                 <div class="col-lg-6">
                   <div id="sobre-txt">
-                    Mussum Ipsum, cacilds vidis litro abertis. Mauris nec dolor in eros commodo tempor. Aenean aliquam molestie leo, vitae iaculis nisl. Quem num gosta di mé, boa gentis num é. Per aumento de cachacis, eu reclamis. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis. Suco de cevadiss deixa as pessoas mais interessantis. Si num tem leite então bota uma pinga aí cumpadi! Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus. In elementis mé pra quem é amistosis quis leo. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. Quem manda na minha terra sou euzis! Nullam volutpat risus nec leo commodo, ut interdum diam laoreet. Sed non consequat odio. Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Pra lá , depois divoltis porris, paradis. Atirei o pau no gatis, per gatis num morreus. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Aenean aliquam molestie leo, vitae iaculis nisl. Delegadis gente finis, bibendum egestas augue arcu ut est. Diuretics paradis num copo é motivis de denguis. Leite de capivaris, leite de mula manquis sem cabeça.
+                   Mussum Ipsum, cacilds vidis litro abertis. Mauris nec dolor in eros commodo tempor. Aenean aliquam molestie leo, vitae iaculis nisl. Quem num gosta di mé, boa gentis num é. Per aumento de cachacis, eu reclamis. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis. 
+                   <br><br>Suco de cevadiss deixa as pessoas mais interessantis. Si num tem leite então bota uma pinga aí cumpadi! Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus. In elementis mé pra quem é amistosis quis leo. 
+                   <br><br>Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. Quem manda na minha terra sou euzis! Nullam volutpat risus nec leo commodo, ut interdum diam laoreet. Sed non consequat odio. Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. 
+                   <br><br>Pra lá , depois divoltis porris, paradis. Atirei o pau no gatis, per gatis num morreus. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! 
+                   <br><br>Aenean aliquam molestie leo, vitae iaculis nisl. Delegadis gente finis, bibendum egestas augue arcu ut est. Diuretics paradis num copo é motivis de denguis. Leite de capivaris, leite de mula manquis sem cabeça.
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-3">
                   <div id="assinante">
-                    
+                    <h5>Mussum Ipsum, cacilds vidis litro abertis</h5>
+                    <span>
+                      Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose.
+                    </span>
+                    <form>
+                      <input
+                      name="nome"
+                      type="text"
+                      pattern="^\D{2,}\s[\D\s]{2,}$"
+                      title="Nome"
+                      placeholder="Nome"
+                      required
+                    />
+                    <input
+                      name="email"
+                      type="email"
+                      title="E-mail"
+                      placeholder="E-mail"
+                      required
+                    />
+                    </form>
                   </div>
                 </div>
 
@@ -92,7 +116,7 @@
     <footer>
       <div id="rodape">
         <div id="linha-rodape" class="row align-items-center">
-          <div class="col-lg-1"></div>
+          <div class="col-lg-2"></div>
           <div class="col-lg-3">
             <img
               src="../assets/logo-branco.png"
@@ -100,7 +124,7 @@
               alt="logotipo"
             />
           </div>
-          <div class="col-lg-7 align-self-center">
+          <div class="col-lg-6 align-self-center">
             <p id="direitos">
               <b>NoControle.blog.</b> Todos os direitos reservados.
             </p>
