--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -26,10 +26,10 @@
           /></a>
         </span>
         <ul id="menu">
-          <!-- <li><a href="../index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="ebook.html">E-book</a></li>
-          <li>
+          <!--<li>
             <input
               type="text"
               name="pesquisa"
