--- a/pages/post1.html
+++ b/pages/post1.html
@@ -5,6 +5,7 @@
     <meta name="author" content="NoControle" />
     <link rel="stylesheet" href="../styles/main.css" />
     <link rel="stylesheet" href="../styles/post.css" />
+    <link rel="stylesheet" href="../styles/sobre.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -26,10 +27,10 @@
           /></a>
         </span>
         <ul id="menu">
-          <!--<li><a href="../index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="ebook.html">E-book</a></li>
-          <li>
+          <!--<li>
             <input
               type="text"
               name="pesquisa"
@@ -42,16 +43,17 @@
     </header>
     <!-- Fim do cabeçalho -->
 
-    <!-- Corpo do site -->
-    <div id="main">
+     <!-- Corpo do site -->
+     <div id="main">
       <!-- Banner do site-->
       <div id="banner">
         <div class="container">
           <div class="row">
             <div class="col-lg-1"></div>
             <div class="col-lg-6 align-self-end">
-              <h2><b>Quem manda na minha terra sou euzis.</b></h2>
-              <h5 id="subtitulo-banner">Quem manda na minha terra sou euzis</h5>
+              <h2><b>
+                Vale a pena ter uma conta digital?</b></h2>
+              <h5 id="subtitulo-banner"></h5>
               <div class="col-lg-3"></div>
             </div>
           </div>
@@ -64,7 +66,21 @@
         <div id="container">
           <div id="row">
             <div class="col-lg-1"></div>
-            <div class="col-lg-10"></div>
+            <div class="col-lg-10">
+              <div class="row">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6">
+                  <div id="sobre-txt">
+                    <p>Se você veio parar aqui, muito provavelmente está pensando em encerrar sua conta em um banco tradicional e abrir uma conta em um banco digital, ou então acabou de migrar para um banco digital, mas ainda não sabe se fez a coisa certa. Acertei?</p>
+                    <img src="../assets/">
+                  </div>
+                </div>
+                <div class="col-3">
+                </div>
+
+                <div class="col-lg-3"></div>
+              </div>
+            </div>
             <div class="col-lg-1"></div>
           </div>
         </div>
@@ -75,7 +91,7 @@
     <footer>
       <div id="rodape">
         <div id="linha-rodape" class="row align-items-center">
-          <div class="col-lg-1"></div>
+          <div class="col-lg-2"></div>
           <div class="col-lg-3">
             <img
               src="../assets/logo-branco.png"
@@ -83,7 +99,7 @@
               alt="logotipo"
             />
           </div>
-          <div class="col-lg-7 align-self-center">
+          <div class="col-lg-6 align-self-center">
             <p id="direitos">
               <b>NoControle.blog.</b> Todos os direitos reservados.
             </p>
