--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -27,10 +27,10 @@
           /></a>
         </span>
         <ul id="menu">
-          <!--<li><a href="../index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="ebook.html">E-book</a></li>
-          <li>
+          <!--</1><li>
             <input
               type="text"
               name="pesquisa"
