--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -11,25 +11,34 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
+    <script src="../js/main.js" type="text/javascript"></script>
     <title>No Controle</title>
   </head>
   <body>
     <!-- Cabeçalho -->
     <header>
       <nav id="cabecalho">
-        <span>
-          <a href="../index.html"
-            ><img
-              src="../assets/logo-colorido.png"
-              id="logo-cabecalho"
-              alt="logotipo"
-          /></a>
-        </span>
+        <div class="row">
+          <div class="col-2"></div>
+          <div class="col-2">
+            <span>
+              <a href="../index.html"
+                ><img
+                  src="../assets/logo-colorido.png"
+                  id="logo-cabecalho"
+                  alt="logotipo"
+              /></a>
+            </span>
+          </div>
+          <div class="col-2"></div>
+          <div class="col-4"></div>
+          <div class="col-4"></div>
+        </div>
         <ul id="menu">
-          <li><a href="../index.html">Home</a></li>
+          <!--<li><a href="../index.html">Home</a></li>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="ebook.html">E-book</a></li>
-          <!--<li>
+          <li>
             <input
               type="text"
               name="pesquisa"
@@ -60,12 +69,13 @@
                 <div class="col-lg-6">
                   <form
                     method="POST"
-                    action="https://smtl.gama.academy/leads/f5d1eb00-39f4-11ea-96ea-713ae26a8736"
+                    
                   >
+                  <!-- action="https://smtl.gama.academy/leads/f5d1eb00-39f4-11ea-96ea-713ae26a8736" -->
                   <div id="form-box">
                     <span>E-BOOK</span>
-                    <h3>Mussum Ipsum, cacilds vidis litro abertis</h3>
-                    <span>Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Per aumento de cachacis, eu reclamis. Quem num gosta di mim que vai caçá sua turmis!</span>
+                    <h3>Purpurina, Corote & Economia!</h3>
+                    <span>Tá afim de curtir o Carnaval mas a grana tá curta? Então você veio ao lugar certo! A gente produziu um e-book exclusivo com todas as dicas que você precisa para aproveitar muuuuito o Carnaval de BH gastando o mínimo possível! Preencha com seus dados e baixe agora! Aproveite e compartilhe com os amigos!</span>
                     <input
                       name="nome"
                       type="text"
@@ -83,7 +93,9 @@
                     />
                     <input name="redirectTo" type="hidden" value="ebook.html" />
                     <input name="debugMode" type="hidden" value="true" />
-                      <input type="submit" value="BAIXAR O MATERIAL"/>
+                    <div id="sub">
+                      <input type="submit" onClick="download_pdf()" value="BAIXAR O MATERIAL"/>
+                    </div>
                   </div>
                   </form>
                 </div>
@@ -98,20 +110,21 @@
     <footer>
       <div id="rodape-ebook">
         <div id="linha-rodape" class="row align-items-center">
-          <div class="col-lg-2"></div>
-          <div class="col-lg-3">
+          <div class="col-2"></div>
+          <div class="col-2">
             <img
               src="../assets/logo-branco.png"
               id="logo-cabecalho"
               alt="logotipo"
             />
           </div>
-          <div class="col-lg-6 align-self-center">
+          <div class="col-2"></div>
+          <div class="col-4 align-self-center">
             <p id="direitos">
               <b>NoControle.blog.</b> Todos os direitos reservados.
             </p>
           </div>
-          <div class="col-lg-1"></div>
+          <div class="col-4"></div>
         </div>
       </div>
     </footer>
