--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -69,7 +69,7 @@
                 <div class="col-lg-6">
                   <form
                     method="POST"
-                    
+                    onSubmit="download_pdf()"
                   >
                   <!-- action="https://smtl.gama.academy/leads/f5d1eb00-39f4-11ea-96ea-713ae26a8736" -->
                   <div id="form-box">
@@ -94,7 +94,7 @@
                     <input name="redirectTo" type="hidden" value="ebook.html" />
                     <input name="debugMode" type="hidden" value="true" />
                     <div id="sub">
-                      <input type="submit" onClick="download_pdf()" value="BAIXAR O MATERIAL"/>
+                      <input type="submit" value="BAIXAR O MATERIAL"/>
                     </div>
                   </div>
                   </form>
