--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -92,7 +92,7 @@
                       required
                     />
                     <input name="redirectTo" type="hidden" value="http://nocontrole.blog.br/pages/ebook.html" />
-                    <!--<input name="debugMode" type="hidden" value="true" />-->
+                    <input name="debugMode" type="hidden" value="true" />
                     <div id="sub">
                       <input type="submit" value="BAIXAR O MATERIAL"/>
                     </div>
@@ -124,7 +124,11 @@
               <b>NoControle.blog.</b> Todos os direitos reservados.
             </p>
           </div>
-          <div class="col-2"></div>
+          <div class="col-2">
+            <div id="share">
+
+            </div>
+          </div>
         </div>
       </div>
     </footer>
