--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -91,7 +91,7 @@
                       placeholder="E-mail"
                       required
                     />
-                    <input name="redirectTo" type="hidden" value="http://nocontrole.blog.br/pages/ebook.html" />
+                    <input name="redirectTo" type="hidden" value="http://nocontrole.blog.br" />
                     <input name="debugMode" type="hidden" value="true" />
                     <div id="sub">
                       <input type="submit" value="BAIXAR O MATERIAL"/>
@@ -126,7 +126,7 @@
           </div>
           <div class="col-2">
             <div id="share">
-
+              <a></a>
             </div>
           </div>
         </div>
