--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -91,7 +91,7 @@
                       required
                     />
                     <input name="redirectTo" type="hidden" value="http://nocontrole.blog.br/pages/ebook.html" />
-                    <input name="debugMode" type="hidden" value="true" />
+                    <!--<input name="debugMode" type="hidden" value="true" />-->
                     <div id="sub">
                       <input type="submit" value="BAIXAR O MATERIAL"/>
                     </div>
